--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <main>
     <header >
-        <!-- insert banner image and logo as seen in the sample website, the links for the images are provided in the question -->
+
+        <img src="logo.jpg" class="logo" alt="logo" />        <!-- insert banner image and logo as seen in the sample website, the links for the images are provided in the question -->
         <h1>
             Understanding the fundamentals of state in Javascript
         </h1>
